k8s/clinet-d.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-client-deployment
spec: 
  replicas: 1
  template:
     metadata:
       labels: 
         app: eshop-client
     spec: 
       containers:
         - name: eshop-client
           resources:
             limits: 
               cpu: 1500m
               ephemeral-storage: 1G
               memory: 600M
             requests:
               cpu: 1500m
               ephemeral-storage: 1G
               memory: 600M
           image: rafshari/eshop-client:v1
           ports: 
           - containerPort: 80
             name: http-port
  selector:
    matchLabels:
     app: eshop-client
