k8s/server-d.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-server
spec:
  replicas: 1
  selector:
   matchLabels:
      app: eshop-server
  template:
    metadata:
      labels:
        app: eshop-server
    spec:
      containers:
      - name: eshop-server
        image: rafshari/eshop_server:v1.0.1
        resources:
          limits:
            memory: 600M
            ephemeral-storage: 1G
            cpu: 1500m
        requests:
            memory: 600M
            ephemeral-storage: 1G
            cpu: 1500m
        ports:
        - containerPort: 5000
