k8s/clinet-s.yml
apiVersion: v1
kind: Service
metadata:
  name: eshop-client
spec:
   ports:
     - port: 80
       protocol: TCP
       targetPort: 80
       name: http
   selector:
    app: eshop-client
    type: ClusterIp
