k8s/mongo-d0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec: 
  replicas: 1
  template:
    metadata:
     labels: 
       app: mongodb
    spec:
      containers:
       - name: mongodb
         image: mongo:latest
         ports: 
           - containerPort: 27017
             name: mongodb-port
         volumeMounts: 
          - mountPath: /data/db
            name: mongodb-pvc
      volumes: 
        - name: mongodb-pvc
          PersistentVolumeClaim:
           claimName: mongodb-pvc
  selector:
    matchLabels:
     app: mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
   ports: 
    - port: 27017
      protocol: TCP
   selector:
     app: mongodb
     type: ClusterIp
