k8s/server-s.yml
apiVersion: v1
kind: Service
metadata:
  name: eshop-server-service
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: eshop-server
  type: ClusterIP
