k8s/MERN.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec: 
  replicas: 1
  template:
    metadata:
     labels: 
       app: mongodb
    spec:
      containers:
       - name: mongodb
         resources: 
           limits: 
            cpu: 1500m
            ephemeral-storage: 1G
            memory: 600M
           requests: 
            cpu: 1500m
            ephemeral-storage: 1G
            memory: 600M
         image: mongo:4.0.4
         ports: 
           - containerPort: 27017
             name: mongodb-port
         volumeMounts: 
          - mountPath: /data/db
            name: mongodb-pvc
      volumes: 
        - name: mongodb-pvc
          PersistentVolumeClaim:
           claimName: mongodb-pvc
  selector:
    matchLabels:
     app: mongodb

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
   ports: 
    - port: 27017
      protocol: TCP
   selector:
     app: mongodb
     type: ClusterIp
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-server
spec:
  selector:
    matchLabels:
      app: eshop-server
  template:
    metadata:
      labels:
        app: eshop-server
    spec:
      containers:
      - name: eshop-server
        image: rafshari/eshop_server:v1
        resources:
          limits:
            memory: 600M
            ephemeral-storage: 1G
            cpu: 1500m
          requests:
            memory: 600M
            ephemeral-storage: 1G
            cpu: 1500m
        ports:
        - containerPort: 5000
 
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-server
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: eshop-server
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-client
spec: 
  replicas: 1
  template:
     metadata:
       labels: 
         app: eshop-client
     spec: 
       containers:
         - name: eshop-client
           resources:
             limits: 
               cpu: 1500m
               ephemeral-storage: 1G
               memory: 600M
             requests:
               cpu: 1500m
               ephemeral-storage: 1G
               memory: 600M
           image: rafshari/eshop_client:v1.1.1
           ports: 
           - containerPort: 80
             name: http-port
  selector:
    matchLabels:
     app: eshop-client
 
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-client
spec:
   ports:
     - port: 80
       protocol: TCP
       targetPort: 80
       name: http
   selector:
     app: eshop-client
   type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route 
metadata: 
  name: eshop-route
  namespace: eshop
spec:
  host: eshop-client-eshop.apps.ir-thr-ba1.arvan.run
  port: 
    targetPort: http
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: edge 
  to: 
    kind: service 
    name: eshop-client
---
apiVersion: route.openshift.io/v1
kind: Route 
metadata: 
  name: eshop-route-client
  namespace: eshop
spec:
  host: eshop-client-eshop.apps.ir-thr-ba1.arvan.run
  port: 
    targetPort: http
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: edge 
  to: 
    kind: service 
    name: eshop-client

---
apiVersion: route.openshift.io/v1
kind: Route 
metadata: 
  name: eshop-route-server
  namespace: eshop
spec:
  host: eshopserver-eshop.apps.ir-thr-ba1.arvan.run
  port: 
    targetPort: 5000
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: edge 
  to: 
    kind: service 
    name: eshop-server
