k8s/route.yml
apiVersion: route.openshift.io/v1
kind: Route 
metadata: 
  name: eshop-route
  namespace: eshop
spec:
  host: eshop-client-eshop.apps.ir-thr-at1.arvan.run
  port: 
    targetPort: http
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: edge 
  to: 
    kind: service 
    name: eshop-client
