k8s/server-d0.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.0.4
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
        volumeMounts: 
          - mountPath: /data/db
            name: mongodb-pvc
        volumes: 
        - name: mongodb-pvc
          PersistentVolumeClaim:
           claimName: mongodb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    protocol: TCP
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-server-deployment
spec:
  selector:
    matchLabels:
      app: eshop-server
  template:
    metadata:
      labels:
        app: eshop-server
    spec:
      containers:
      - name: eshop-server
        image: rafshari/eshop_server:v1.0.1
        resources:
          limits:
            memory: "128Mi"
            ephemeral-storage: 1G
            cpu: "500m"
          requests:
            memory: "128Mi"
            ephemeral-storage: 1G
            cpu: "500m"
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: eshop-server-service
spec:
  selector:
    app: eshop-server
  ports:
  - port: 5000
    protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-client
spec:
  selector:
    matchLabels:
      app: eshop-client
  template:
    metadata:
      labels:
        app: eshop-client
    spec:
      containers:
      - name: eshop-client
        image: rafshari/eshop-client:v1.0.1
        resources:
          limits:
            memory: "128Mi"
            ephemeral-storage: 1G
            cpu: "500m"
          requests:
            memory: "128Mi"
            ephemeral-storage: 1G
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-client
spec:
  selector:
    app: eshop-client
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

---
apiVersion: route.openshift.io/v1
kind: Route 
metadata: 
  name: eshop-route
  namespace: eshop
spec:
  host: eshop-client-eshop.apps.ir-thr-at1.arvan.run
  port: 
    targetPort: http
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: edge 
  to: 
    kind: service 
    name: eshop-client
